janet-check/src/analysis/references/snapshots/janet_check__analysis__references__tests__module_definition_at_its_declaration.snap
---
source: src/analysis/references/tests.rs
expression: "/ws/src/shapes.janet: defn area"
---
----- SYMBOL
-- /ws/src/shapes.janet
(def pi 3)
(defn area [shape] (* pi (shape :r)))
      ▔▔▔▔
(defn scale [area k] (* area k))


----- TARGET
Module { file: "/ws/src/shapes.janet", name: "area" }

----- REFERENCES
-- /ws/src/facade.janet
(defn- re-export [path names] nil)
(re-export "./shapes" ['area])
                        ▔▔▔▔

-- /ws/src/report.janet
(import ./shapes)
(defn total [xs] (map shapes/area xs))
                             ▔▔▔▔
(defn f [shape] shape)

-- /ws/src/shapes.janet
(def pi 3)
(defn area [shape] (* pi (shape :r)))
      ▔▔▔▔
(defn scale [area k] (* area k))

-- /ws/src/user.janet
(import ./facade)
(facade/area {:r 1})
        ▔▔▔▔

-- /ws/test/alias.janet
(import /src/shapes :as s)
(s/area {:r 1})
   ▔▔▔▔
(area 1)

-- /ws/test/pkg.janet
(use fixture/shapes)
(area 2)
 ▔▔▔▔


----- DECLARATION
-- /ws/src/shapes.janet
(def pi 3)
(defn area [shape] (* pi (shape :r)))
      ▔▔▔▔
(defn scale [area k] (* area k))
